source/datahub/main/default/objects/Exception__c/fields/ExceptionDetails__c.field-meta.xml
<CustomField>
    <fullName>ExceptionDetails__c</fullName>
    <label>Exception Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>