source/datahub/main/default/objects/Exception__c/fields/ExceptionSource__c.field-meta.xml
<CustomField>
    <fullName>ExceptionSource__c</fullName>
    <label>Exception Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>Aura</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>