source/datahub/main/default/objects/Exception__c/fields/GovtLimitInExecutingCode__c.field-meta.xml
<CustomField>
    <fullName>GovtLimitInExecutingCode__c</fullName>
    <label>Govt Limit in Executing Code</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>